Added SPEEDTEST_SERVER environment variable to speedtest docker compose service, updated systemd files to allow 10 minutes to start since different board and distro combinations have different startup times. Updated systemd service files to ensure dependencies are in place before attempting start

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -97,6 +97,8 @@ services:
       - 9798
     ports:
       - 9798:9798
+    environment:
+      - SPEEDTEST_SERVER:{{speedtest_server_id}}
     image: miguelndecarvalho/speedtest-exporter
     restart: always
     networks:
