Added openspeedtest local server as an additional feature

--- a/templates/systemd-service.j2
+++ b/templates/systemd-service.j2
@@ -4,7 +4,9 @@ Requires=docker.service
 After=docker.service
 
 [Service]
+{% if 'dependent_service' %}
 After={{dependent_service}}
+{% endif %}
 Restart=always
 TimeoutStartSec=600
 
